--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: 'Baloo Paaji 2', cursive;
 }
 
 header {
@@ -21,9 +22,9 @@ header {
 }
 
 .latest-articles > h1 {
-  width: 50%;
+  width: 40%;
   background-color: #252525;
-  padding: 1em 0;
+  padding: 0.8em 0;
   text-align: center;
   position: absolute;
   top: 2%;
@@ -73,7 +74,7 @@ header {
 .latest-articles .three-col-articles .three-col-latest-article {
   width: 33.33333%;
   background-color: #898989;
-  height: 500px;
+  height: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,15 +82,16 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .latest-articles .three-col-articles .three-col-latest-article h1 {
+  margin-top: 2em;
   padding: 1em;
   font-size: 1.8rem;
   color: #e3e3e3;
@@ -319,5 +321,97 @@ header {
   width: 20%;
   margin: 1em 2em;
   background-color: #bbbbbb;
+}
+
+.guides {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 5em 0;
+  background-color: #898989;
+}
+
+.guides .guide {
+  width: 33.333%;
+  height: 800px;
+  padding: 2em 0;
+}
+
+.guides .guide ul {
+  width: 90%;
+  margin: 0 auto;
+  color: #e3e3e3;
+  list-style: none;
+}
+
+.guides .guide ul li {
+  width: 85%;
+  margin: 0 auto;
+  text-align: center;
+  margin: 0.8em 0;
+  font-size: 1.6rem;
+}
+
+.guides .guide ul li h2 {
+  font-size: 2rem;
+  background-color: #575757;
+  text-align: left;
+  padding: 0.7em;
+}
+
+.guides .newsletter {
+  width: 66.666%;
+  background-color: #252525;
+}
+
+footer {
+  height: 90vh;
+  background-color: #575757;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 90%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #252525;
+  list-style-position: inside;
+}
+
+footer ul li {
+  font-size: 1.7rem;
+  color: #e3e3e3;
+  margin: 1em 0.7em 1em 0.2em;
+}
+
+footer p {
+  width: 40%;
+  color: #e3e3e3;
+  line-height: 1.5em;
+  padding: 1em;
+  -webkit-text-emphasis: center;
+          text-emphasis: center;
+  margin-top: 2em;
 }
 /*# sourceMappingURL=style.css.map */
